# OODLabs

./: .gitignore  CMakeLists.txt  commandsUml.drawio
10/: CMakeLists.txt
10/src/: main.cpp
10/src/App/: DraftFacade.h
10/src/App/AppDataObjects/: DraftContainer.h  ShapeSelection.h  SubscriptionContainer.h
10/src/App/Commands/: DeleteShapeCommand.h  InsertShapeCommand.h  UpdateShapeCommand.h
10/src/App/UseCase/: DeleteShapeUseCase.h  IUseCase.h  InsertShapeUseCase.h  MoveShapeUseCase.h  ResizeShapeUseCase.h
10/src/Common/: CommonStructs.h  IObservable.h
10/src/Domain/: Draft.h  IdGenerator.h  Shape.h
10/src/History/: AbstractCommand.cpp  AbstractCommand.h  History.h  ICommand.h  MacroCommand.cpp  MacroCommand.h
10/src/Infrastructure/: SFMLCanvas.h  SFMLEvent.h
10/src/Infrastructure/Canvas/: SFMLCanvas.cpp  SFMLCanvas.h
10/src/Infrastructure/Events/: DeleteKeysPressedEvent.h  EventFactory.h  MouseDownEvent.h  MouseMovedEvent.h  MouseUpEvent.h  RedoKeysPressedEvent.h  UndoKeysPressedEvent.h
10/src/Presentor/: IInteractionEvent.h  IPresentor.h  MainPresenter.h  PDraft.h  PShape.h
10/src/View/: ICanvas.h
10/src/View/Components/: VMenu.h  VShape.h  VWindow.h
10/src/View/Events/: AddShapeToSelectEvent.h  CreateShapeEvent.h  DeleteShapeEvent.h  MoveSelectedEvent.h  ResizeSelectedEvent.h  SelectShapeEvent.h
10/src/View/ShapeStrategies/: Circle.h  IFigure.h  Rectangle.h  Triangle.h
3/3_1/: Beverages.h  Condiments.h  IBeverage.h  main.cpp
4/: factory.drawio  main.cpp
4/Canvas/: Canvas.cpp  Canvas.h
4/Client/: Client.h
4/Config/: ConfigProvider.h
4/Data/: Config.json  Input.txt
4/Designer/: Designer.h  IDesigner.h
4/Draft/: Color.h  ICanvas.h  PictureDraft.h  Point.h  Shape.h
4/Painter/: IPainter.h  Painter.h
4/SFML/: Canvas.cpp  Canvas.h  Window.h
4/Shape/: Color.h  Ellipse.h  Point.h  Rectangle.h  RegularPolygon.h  Shape.h  ShapeNames.h  Triangle.h
4/ShapeFactory/: Ellipse.h  IShapeFactory.h  Rectangle.h  RegularPolygon.h  ShapeFactory.h  ShapeNames.h  Triangle.h
4/Test/: test.cpp
5/: main.cpp
5/Src/Client/: Client.cpp  Client.h
5/Src/Command/: AbstractCommand.cpp  AbstractCommand.h  DeleteCommand.cpp  DeleteCommand.h  EditParagraphCommand.cpp  EditParagraphCommand.h  ICommand.h  InsertImageCommand.cpp  InsertImageCommand.h  InsertParagraphCommand.cpp  InsertParagraphCommand.h  MacroCommand.cpp  MacroCommand.h  ResizeImageCommand.cpp  ResizeImageCommand.h  SaveCommand.cpp  SaveCommand.h  SetTitleCommand.cpp  SetTitleCommand.h
5/Src/CommandHandler/: CommandHandler.cpp  CommandHandler.h
5/Src/Document/: Document.cpp  Document.h  IDocument.h
5/Src/DocumentItem/: ConstDocumentItem.h  DocumentItem.h  IImage.h  IParagraph.h  Image.h  Paragraph.h
5/Src/History/: History.h
5/Test/: Tests.cpp
5/docs/: diagram.md
6/: doc.md  main.cpp
6/Test/: Tests.cpp
6/app/: ModernGraphicsCanvasAdapter.h  ModernGraphicsCanvasClassAdapter.h
6/graphics_lib/: graphics_lib.h
6/modern_graphics_lib/: modern_graphics_lib.h
6/shape_drawing_lib/: shape_drawing_lib.h
7/: Client.h  main.cpp  uml.md
7/Canvas/: CairoCanvas.h  ConsoleCanvas.h  ICanvas.h
7/Shape/: Ellipse.h  Group.h  IGroup.h  IShape.h  Point.h  RectD.h  Rectangle.h  Shape.h  Triangle.h
7/ShapeFactory/: IShapeFactory.h  ShapeFactory.h
7/ShapeLoader/: ShapeLoader.h
7/Slide/: Slide.h  SlideBuilder.h  SlideService.h
7/Style/: Color.h  FillStyle.h  GroupStyle.h  IGroupStyle.h  IStyle.h  LineStyle.h  Style.h
7/Test/: Test.cpp
8/: GumBallMachineWithDynamicallyCreatedState.h  doc.md  main.cpp
8/GumBallMachine/: GumBallMachineWithState.h
8/Menu/: Menu.h
8/Menu/Commands/: EjectCoinsCommand.h  ExitCommand.h  ICommand.h  InsertCoinCommand.h  RefillCommand.h  TurnCrankCommand.h
8/MultiGumBallMachine/: IMultiGumballMachine.h  MultiGumballMachine.h
8/MultiGumBallMachine/Naive/: NaiveGumBallMachine.h
8/MultiGumBallMachine/State/: HasQuarterState.h  IState.h  NoQuarterState.h  SoldOutState.h  SoldState.h
8/Test/: NaiveTest.cpp  StateTest.cpp  Test.cpp
9/: .clang-format  CMakeLists.txt  doc.md  main.cpp
9/Tests/: Test.cpp
9/src/: Drawer.h  Geom.h  Image.h  ImageService.h  Tile.h
